updated ses schools page ETS

--- a/apps/ets_tutoring_2/public/ses.html
+++ b/apps/ets_tutoring_2/public/ses.html
@@ -105,6 +105,7 @@
             <li><a href="ses.html#montebello-unified">Montebello Unified</a></li>
             <li><a href="ses.html#norwalk-la-mirada">Norwalk-La Mirada</a></li>
             <li><a href="ses.html#orange">Orange Unified</a></li>
+            <li><a href="ses.html#paramount">Paramount Unified</a></li>
             <li><a href="ses.html#pasadena">Pasadena Unified</a></li>
             <li><a href="ses.html#rowland-unified">Rowland Unified</a></li>
             <li><a href="ses.html#san-gabriel">San Gabriel Unified</a></li>
@@ -549,7 +550,7 @@
   </ul>
   <h2>Sign-up information:</h2>
   <p>
-     Sign-ups end in September. Please call for more information.
+     The sign-up period is in September. Please call for more information.
   </p>
   <a class="phone" href="tel:5627741926">(562) 774-1926</a> <br />
   <br />
@@ -719,8 +720,21 @@
     Hawthorne, CA 90250 <br />
     <br />
   </p>
+  <h2>Schools that Qualify for Tutoring:</h2>
+  <ul>
+    <li>Jefferson School</li>
+    <li>Kornblum School</li>
+    <li>Ramona School</li>
+    <li>York School</li>
+    <li>Zela Davis School</li>
+    <li>Washington School</li>
+    <li>Bud Carson Middle School</li>
+    <li>Hawthorne Middle School</li>
+    <li> Prairie Vista Middle School</li>
+  </ul>
+    <h2>Sign-up Information:</h2>
     <h3>
-      Signups will begin soon. Please call for more information. <br />
+      The sign-up period is September 19-26. Applications will be available online September 20th. Please call for more information.
     </h3>
     <a class="phone" href="tel:3104891387">(310) 489-1387</a> <br />
 
@@ -980,6 +994,56 @@
   <a class="phone" href="tel:3236960593">(323) 696-0593</a> <br />
   <a class="phone" href="tel:5627741926">(562) 774-1926</a> <br />
   <a class="phone" href="tel:6265393078">(626) 539-3078</a> <br />
+</div>
+
+<div class="tab-pane" id="paramount">
+  <h2><a href="http://www.paramount.k12.ca.us/">Paramount Unified School District</a></h2>
+  <p>
+    15110 California Ave. <br /> 
+    Paramount, CA 90723<br />
+  </p>
+  <h2>Schools that Qualify for Tutoring:</h2>
+  <ul>
+    <li>Collins Elementary</li>
+    <li>Gaines Elementary</li>
+    <li>Hollydale (K-8)</li>
+    <li>Los Cerritos Elementary</li>
+    <li>Mokler Elementary</li>
+    <li>Paramount Park Middle</li>
+    <li>Paramount High School (Senior Campus)</li>
+    <li>Paramounht High School (West Campus)</li>
+    <li>Roosevelt Elementary</li>
+    <li>Tanner Elementary</li>
+    <li>Wirtz Elementary</li>
+  </ul>
+  <h2>Sign-up Information:</h2>
+    <p>The sign-up period is October 3-18. Please call for more information.</p>
+    <a class="phone" href="tel:5627741926">(562) 774-1926</a> <br />
+  <br />
+  <h3>Additional Numbers</h3>
+  <a class="phone" href="tel:3104891387">(310) 489-1387</a> <br />
+  <a class="phone" href="tel:3236960593">(323) 696-0593</a> <br />
+  <a class="phone" href="tel:6265393078">(626) 539-3078</a> <br />
+  <a class="phone" href="tel:7149220394">(714) 922-0394</a> <br />
+</div>
+
+<div class="tab-pane" id="pasadena">
+  <h2><a href="http://www.pusd.us/">Pasadena Unified</a></h2>
+  <p>
+    351 South Hudson Ave.<br />
+    Pasadena, CA 91109 <br />
+  </p>
+  <h3>
+      Signups will begin soon. Please call for more information. <br />
+    </h3>
+    <a class="phone" href="tel:6265393078">(626) 539-3078</a> <br />
+    <br />
+    <h3>Additional Numbers</h3>
+    <a class="phone" href="tel:3104891387">(310) 489-1387</a> <br />
+    <a class="phone" href="tel:3236960593">(323) 696-0593</a> <br />
+    <a class="phone" href="tel:5627741926">(562) 774-1926</a> <br />
+    <a class="phone" href="tel:7149220394">(714) 922-0394</a> <br />
+
 </div>
 
 <div class="tab-pane" id="pasadena">
