ETS ses page update.

--- a/apps/ets_tutoring_2/public/ses.html
+++ b/apps/ets_tutoring_2/public/ses.html
@@ -916,11 +916,15 @@
     <li>Cesar Chavez Elementary</li>
     <li>Fremont Elementary</li>
     <li>Garfield Elementary</li>
+    <li>Greenwood Elementary</li>
     <li>Joseph Gascon Elementary</li>
     <li>La Merced Elementary</li>
+    <li>Montebello Park Elementary</li>
     <li>Potrero Heights Elementary</li>
     <li>Rosewood Park Elementary</li>
     <li>Suva Elementary</li>
+    <li>Washington Elementary</li>
+    <li>Wilcox Elementary</li>
     <li>Winter Gardens Elementary</li>
     <li>Bell Gardens Intermediate</li>
     <li>Eastmont Intermediate</li>
@@ -928,6 +932,7 @@
     <li>La Merced Intermediate</li>
     <li>Montebello Intermediate</li>
     <li>Suva Intermediate</li>
+
   </ul>
   <h2>Sign-up Information</h2>
     <h3>
