--- a/apps/trolls_goals/public/tmpl/manage_categories.html
+++ b/apps/trolls_goals/public/tmpl/manage_categories.html
@@ -1,5 +1,5 @@
 <div class="tab_wrapper" ng-class="{ 'has-error': category_error }">
-  <h2 ng-show="categories.length">Categories</h2>
+  <h2>Categories</h2>
   <table class="table table-striped" ng-show="categories.length">
     <thead>
       <th>Title</th>
@@ -23,8 +23,8 @@
     </tr>
     </tbody>
   </table>
-  <h3 ng-if="!editing_category">New Category</h3>
-  <h3 ng-if="editing_category">Edit Category</h3>
+  <h3 ng-show="editing_category">Edit Category</h3>
+  <h3 ng-hide="editing_category">New Category</h3>
   <form ng-submit="saveCategory(category)">
     <label for="category_name">Name:</label>
     <input ng-model="category.name" id="category_name" />
@@ -35,7 +35,7 @@
       ng-model="category.tags" ms-header="Select Tags"
       options="tag._id as tag.name for tag in tags"></multiselect>
     <button type="submit" class="btn btn-primary">Submit</button>
-    <button ng-if="editing_category" class="btn btn-warning" ng-click="revertCategory()">Discard Changes</button>
+    <button ng-if="editing_category" class="btn btn-warning" ng-click="revertCategory()">Cancel</button>
   </form>
   <div class="help-block" ng-if="category_error">{{category_error}}</div>
 </div>  
