--- a/apps/trolls_goals/public/tmpl/manage_tags.html
+++ b/apps/trolls_goals/public/tmpl/manage_tags.html
@@ -1,5 +1,5 @@
 <div class="tab_wrapper" ng-class="{ 'has-error': tag_error }">
-  <h2 ng-show="tags.length">Tags</h2>
+  <h2>Tags</h2>
   <table class="table table-striped" ng-show="tags.length">
     <thead>
       <th>Title</th>
@@ -17,15 +17,15 @@
     </tr>
     </tbody>
   </table>
-  <h3 ng-if="!editing_tag">New Tag</h3>
-  <h3 ng-if="editing_tag">Edit Tag</h3>
+  <h3 ng-show="editing_tag">Edit Tag</h3>
+  <h3 ng-hide="editing_tag">New Tag</h3>
   <form ng-submit="saveTag(tag)">
     <label for="tag_name">Name:</label>
     <input ng-model="tag.name" id="tag_name" />
     <label for="tag_description">Description:</label>
     <input ng-model="tag.description" id="tag_description" />
     <button type="submit" class="btn btn-primary">Submit</button>
-    <button ng-if="editing_tag" class="btn btn-warning" ng-click="revertTag()">Discard Changes</button>
+    <button ng-if="editing_tag" class="btn btn-warning" ng-click="revertTag()">Cancel</button>
   </form>
   <div class="help-block" ng-if="tag_error">{{tag_error}}</div>
 </div>
