--- a/apps/trolls_goals/public/tmpl/tags.html
+++ b/apps/trolls_goals/public/tmpl/tags.html
@@ -1,5 +1,5 @@
-<h2 ng-if="tag">{{tag.name}}</h2>
-<h2 ng-if="! tag">All Categories</h2>
+<h2 ng-show="tag">{{tag.name}}</h2>
+<h2 ng-hide="! tag">All Categories</h2>
  <table class="table table-striped" ng-show="tag_categories.length">
     <thead>
       <th>Name</th>
@@ -11,11 +11,16 @@
           {{ category.name }}
         </td>
         <td class="clickable"
-            ng-click="createRecord(category._id, -1)"
+            ng-click="createRecord(category._id, day)"
             ng-repeat="day in [min_day, today] | makeRange">
           <span class="glyphicon glyphicon-ok-sign"
                 ng-repeat="record in records[category._id][day]"
-                ng-click="deleteRecord(record); $event.stopPropagation()">
+                customtooltip="(Overridden by template)"
+                customtooltip-item="record"
+                customtooltip-methods="record_methods"
+                customtooltip-toggle="pop_open"
+                customtooltip-trigger="click"
+                ng-click="$event.stopPropagation()">
           </span>
         </td>
       </tr>
