Fix record scoping and today calculation

--- a/apps/trolls_goals/public/tmpl/records_table.html
+++ b/apps/trolls_goals/public/tmpl/records_table.html
@@ -27,7 +27,7 @@
         Total
       </td>
       <td ng-repeat="day in [min_day, today] | makeRange">
-        {{ getNumRecords(day) }}
+        {{ getNumRecords(domain_areas, day) }}
       </td>
   </tbody>
 </table>
