--- a/apps/trolls_goals/public/tmpl/navlink.html
+++ b/apps/trolls_goals/public/tmpl/navlink.html
@@ -1,4 +1,4 @@
 <li ng-class="{ active: isActive() }">
   <a ng-if="! isActive()" href='#/{{href}}'>{{title}}</a>
-  <span ng-if="isActive()">{{title}}</span>
+  <strong ng-if="isActive()">{{title}}</strong>
 </li>
