--- a/apps/trolls_goals/public/tmpl/record_tooltip.html
+++ b/apps/trolls_goals/public/tmpl/record_tooltip.html
@@ -2,16 +2,8 @@
   <div class="arrow"></div>
   <div class="popover-inner">
     <div>
-      <label for="{{item._id}}_activities">Activities:</label>
-      <input id="{{item._id}}_activities" type="text" ng-model="item.activities" />
-    </div>
-    <div>
-      <label for="{{item._id}}_units"># of Units:</label>
-      <input id="{{item._id}}_units" type="text" ng-model="item.num_units" />
-    </div>
-    <div>
       <label for="{{item._id}}_description">Description:</label>
-      <input id="{{item._id}}_description" type="text" ng-model="item.description" />
+      <textarea id="{{item._id}}_description" ng-model="item.description" />
     </div>
     <button class="btn btn-primary" ng-click="saveRecord(item);">Update</button>
     <button class="btn btn-danger" ng-click="deleteRecord(item);">Delete</button>
