Various tweaks, including prompt_for_description and changing custom tooltip code

--- a/apps/trolls_goals/public/tmpl/manage_domains.html
+++ b/apps/trolls_goals/public/tmpl/manage_domains.html
@@ -2,7 +2,7 @@
   <h2>Domains</h2>
   <table class="table table-striped" ng-show="domains.length">
     <thead>
-      <th>Title</th>
+      <th>Name</th>
       <th>Description</th>
     </thead>
     <tbody>
