--- a/apps/trolls_goals/public/tmpl/record_tooltip.html
+++ b/apps/trolls_goals/public/tmpl/record_tooltip.html
@@ -2,7 +2,7 @@
   <div class="arrow"></div>
   <div class="popover-inner">
     <div>
-      <textarea placeholder="Description" ng-model="item.description" />
+      <textarea placeholder="Description" ng-model="item.description" focus-on-load />
     </div>
     <button class="btn btn-primary" ng-click="saveRecord(item);">Update</button>
     <button class="btn btn-danger" ng-click="deleteRecord(item);">Delete</button>
