--- a/apps/trolls_goals/public/tmpl/manage_areas.html
+++ b/apps/trolls_goals/public/tmpl/manage_areas.html
@@ -2,12 +2,13 @@
   <h2>Areas</h2>
   <table class="table table-striped" ng-show="areas.length">
     <thead>
-      <th>Title</th>
+      <th>Name</th>
       <th>Description</th>
       <th>Domain</th>
+      <th>Prompt for Description?</th>
     </thead>
     <tbody>
-    <tr ng-repeat="area in areas | orderBy: 'name' | orderBy: 'domain'" ng-click="activeArea(area)">
+    <tr ng-repeat="area in areas | orderBy: 'domain'" ng-click="activeArea(area)">
       <td class="clickable">
         {{area.name}}
       </td>
@@ -16,6 +17,9 @@
       </td>
       <td class="clickable">
         {{areaDomainName(area)}}
+      </td>
+      <td class="clickable">
+        {{area.prompt_for_description ? 'Yes' : 'No'}}
       </td>
       <td class="clickable">
         <button class="btn btn-danger" ng-click="deleteArea(area); $event.stopPropagation()">Delete</button>
@@ -27,12 +31,16 @@
   <h3 ng-hide="editing_area">New Area</h3>
   <form ng-submit="saveArea(area)">
     <label for="area_name">Name:</label>
-    <input ng-model="area.name" id="area_name" />
+    <input type="text" ng-model="area.name" id="area_name" />
     <label for="area_description">Description:</label>
-    <input ng-model="area.description" id="area_description" />
-    <select ng-model="area.domain" placeholder="Select a Domain" ng-options="domain._id as domain.name for domain in domains"></select>
+    <input type="text" ng-model="area.description" id="area_description" />
+    <label for="area_domain">Domain:</label>
+    <select ng-model="area.domain" placeholder="Select a Domain" ng-options="domain._id as domain.name for domain in domains" id="area_domain"></select>
+    <label for="area_prompt_for_description">Prompt for Description?</label>
+    <input type="checkbox" ng-model="area.prompt_for_description" id="area_prompt_for_description" />
+    <input type="hidden" ng-model="area.start_day" />
     <button type="submit" class="btn btn-primary">Submit</button>
-    <button ng-if="editing_area" class="btn btn-warning" ng-click="revertArea()">Cancel</button>
+    <button ng-show="editing_area" class="btn btn-warning" ng-click="revertArea()">Cancel</button>
   </form>
   <div class="help-block" ng-if="area_error">{{area_error}}</div>
 </div>
