--- a/apps/trolls_goals/public/tmpl/record_tooltip.html
+++ b/apps/trolls_goals/public/tmpl/record_tooltip.html
@@ -2,10 +2,18 @@
   <div class="arrow"></div>
   <div class="popover-inner">
     <div>
-      <textarea placeholder="Description" ng-model="item.description" focus-on-load />
+      <textarea placeholder="Description" ng-model="item.details"
+                focus-on-load ng-ctrl-enter="saveRecord(item)" />
     </div>
-    <button class="btn btn-primary" ng-click="saveRecord(item);">Update</button>
-    <button class="btn btn-danger" ng-click="deleteRecord(item);">Delete</button>
-    <button class="btn btn-warning" ng-click="revertRecord(item);">Cancel</button>
+    <button class="btn btn-primary" ng-click="saveRecord(item);" title="Update">
+      <span class="glyphicon glyphicon-ok"></span>
+      <img src="/ctrl_enter.png" />
+    </button>
+    <button class="btn btn-danger" ng-click="deleteRecord(item);" title="Delete">
+      <span class="glyphicon glyphicon-trash"></span>
+    </button>
+    <button class="btn btn-warning" ng-click="revertRecord(item);" title="Discard Changes">
+      <span class="glyphicon glyphicon-remove"></span>
+    </button>
   </div>
 </div>
