--- a/apps/trolls_goals/public/tmpl/records_table.html
+++ b/apps/trolls_goals/public/tmpl/records_table.html
@@ -13,6 +13,7 @@
           ng-repeat="day in [min_day, today] | makeRange">
         <span class="glyphicon glyphicon-ok-sign"
               ng-repeat="record in records[area._id][day]"
+              title="{{record.description}}"
               trigger-click-on-load
               customtooltip="(Overridden by template)"
               customtooltip-item="record"
