--- a/apps/trolls_goals/public/tmpl/record_tooltip.html
+++ b/apps/trolls_goals/public/tmpl/record_tooltip.html
@@ -3,16 +3,17 @@
   <div class="popover-inner">
     <div>
       <textarea placeholder="Description" ng-model="item.details"
-                focus-on-load ng-ctrl-enter="saveRecord(item)" />
+                focus-on-load ng-ctrl-enter="saveRecord(item)"
+                ng-ctrl-delete="deleteRecord(item);" ng-escape="revertRecord(item)" />
     </div>
-    <button class="btn btn-primary" ng-click="saveRecord(item);" title="Update">
+    <button class="btn btn-primary" ng-click="saveRecord(item);" title="Update (Ctrl + Enter)">
       <span class="glyphicon glyphicon-ok"></span>
       <img src="/ctrl_enter.png" />
     </button>
-    <button class="btn btn-danger" ng-click="deleteRecord(item);" title="Delete">
+    <button class="btn btn-danger" ng-click="deleteRecord(item);" title="Delete (Ctrl + Delete)">
       <span class="glyphicon glyphicon-trash"></span>
     </button>
-    <button class="btn btn-warning" ng-click="revertRecord(item);" title="Discard Changes">
+    <button class="btn btn-warning" ng-click="revertRecord(item);" title="Discard Changes (Esc)">
       <span class="glyphicon glyphicon-remove"></span>
     </button>
   </div>
