New ayoshitake.com portal

--- a/apps/ayoshitake.com/public/index.html
+++ b/apps/ayoshitake.com/public/index.html
@@ -12,15 +12,17 @@
        More info: h5bp.com/i/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
+  <title>Aaron Yoshitake</title>
   <meta name="description" content="">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="css/style.css">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
@@ -33,8 +35,24 @@
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-  <!--<iframe class="imgur-album" width="100%" height="550" frameborder="0" src="http://imgur.com/a/BOc7V/embed"></iframe>-->
-  <iframe class="imgur-album" width="100%" height="550" frameborder="0" src="http://imgur.com/a/x6sRL/embed"></iframe>
+  <!-- Latest compiled and minified CSS -->
+
+  <h1>
+    Aaron Yoshitake
+  </h1>
+  <h2>
+    Full-Stack Web Developer
+  </h2>
+  <h2>
+    Wizard
+  </h2>
+
+  <div class="box_gar">
+    <a href ="https://github.com/airandfingers"> <span> <img id="github"></span></a>
+    <a href="mailto:airandfingers@gmail.com"> <span class="glyphicon glyphicon-envelope"> </span> </a>
+    <a href="http://blog.ayoshitake.com"> <span class="glyphicon glyphicon-pencil"></span></a>
+    <a href="http://all.ayoshitake.com">  <span class="glyphicon glyphicon-folder-open">  </span> </a>
+  </div>
 
   <!-- JavaScript at the bottom for fast page loading -->
 
