--- a/apps/trolls_goals/public/tmpl/day.html
+++ b/apps/trolls_goals/public/tmpl/day.html
@@ -4,7 +4,7 @@
       <span class="glyphicon glyphicon-arrow-left"></span>
     </a>
     <h2 class="time_header">{{ day | dayToDate | dateFormat }}</h2>
-    <a ng-if="day < today" href="#/day/{{day + 1}}" class="change_time">
+    <a ng-if="day < today" href="#/day/{{day + 1 === today ? '' : day + 1}}" class="change_time">
       <span class="glyphicon glyphicon-arrow-right"></span>
     </a>
     <span ng-if="day === today"
