--- a/apps/trolls_goals/public/tmpl/manage_areas.html
+++ b/apps/trolls_goals/public/tmpl/manage_areas.html
@@ -5,7 +5,7 @@
       <th>Name</th>
       <th>Description</th>
       <th>Domain</th>
-      <th>Prompt for Description?</th>
+      <th>Prompt for Record Details?</th>
     </thead>
     <tbody>
     <tr ng-repeat="area in areas | orderBy: 'domain'" ng-click="activeArea(area)">
@@ -19,17 +19,21 @@
         {{areaDomainName(area)}}
       </td>
       <td class="clickable">
-        {{area.prompt_for_description ? 'Yes' : 'No'}}
+        {{area.prompt_for_details ? 'Yes' : 'No'}}
       </td>
       <td class="clickable">
-        <button class="btn btn-danger" ng-click="deleteArea(area); $event.stopPropagation()">Delete</button>
+        <button class="btn btn-danger" ng-click="deleteArea(area); $event.stopPropagation()" title="Delete">
+          <span class="glyphicon glyphicon-trash"></span>
+        </button>
       </td>
     </tr>
     </tbody>
   </table>
   <h3 ng-show="editing_area">Edit Area</h3>
   <h3 ng-hide="editing_area">New Area</h3>
-  <form ng-submit="saveArea(area)">
+  <div ng-ctrl-enter="$root.saveArea(item)"
+       ng-ctrl-delete="$root.deleteArea(item);"
+       ng-escape="$root.revertArea(item)">
     <label for="area_name">Name:</label>
     <input type="text" ng-model="area.name" id="area_name" />
     <label for="area_description">Description:</label>
@@ -37,10 +41,12 @@
     <label for="area_domain">Domain:</label>
     <select ng-model="area.domain" placeholder="Select a Domain" ng-options="domain._id as domain.name for domain in domains" id="area_domain"></select>
     <label for="area_prompt_for_details">Prompt for Record Details?</label>
-    <input type="checkbox" ng-model="area.prompt_for_details" id="area_prompt_for_details" />
+    <select ng-model="area.prompt_for_details" id="area_prompt_for_details"
+            ng-options="o.v as o.n for o in [{ n: 'No', v: false }, { n: 'Yes', v: true }]">
+    </select>
     <input type="hidden" ng-model="area.start_day" />
     <button type="submit" class="btn btn-primary">Submit</button>
-    <button ng-show="editing_area" class="btn btn-warning" ng-click="revertArea()">Cancel</button>
-  </form>
+    <button ng-show="editing_area" class="btn btn-warning" ng-click="$root.revertArea()">Cancel</button>
+  </div>
   <div class="help-block" ng-if="area_error">{{area_error}}</div>
 </div>
