Change "add area" tooltip placement to bottom

--- a/apps/trolls_goals/public/tmpl/records_table.html
+++ b/apps/trolls_goals/public/tmpl/records_table.html
@@ -60,6 +60,7 @@
               crudtooltip-type="area"
               crudtooltip-mode="Create"
               crudtooltip-trigger="click"
+              crudtooltip-placement="bottom"
               ng-click="$root.new_area.domain = domain._id">
         </span>
         Total
