--- a/apps/trolls_goals/public/tmpl/domain_tooltip.html
+++ b/apps/trolls_goals/public/tmpl/domain_tooltip.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="crud_buttons">
-      <button class="btn btn-primary" ng-click="$root.saveDomain(item); closePopup();" title="Update (Ctrl + Enter)">
+      <button class="btn btn-primary" ng-click="$root.saveDomain(item); closePopup();" title="{{mode}} (Ctrl + Enter)">
         {{mode}}
         <span class="glyphicon glyphicon-ok"></span>
       </button>
