--- a/apps/trolls_goals/public/tmpl/area_tooltip.html
+++ b/apps/trolls_goals/public/tmpl/area_tooltip.html
@@ -1,4 +1,5 @@
-<div class="popover {{placement}}" ng-class="{ in: isOpen, fade: animation() }">
+<div class="popover {{placement}}" ng-class="{ in: isOpen, fade: animation() }"
+     ng-init="$root.backupArea(item)">
   <div class="arrow"></div>
   <div class="popover-inner">
     <div ng-enter="$root.saveArea(item); closePopup();"
@@ -22,6 +23,12 @@
       <div class="input-group" title="When you add a record in this area, will you want to enter details?">
         <span class="input-group-addon bold" focus-next-when-clicked>Enter Record Details?</span>
         <select class="form-control" ng-model="item.prompt_for_details"
+                ng-options="o.v as o.n for o in [{ n: 'No', v: false }, { n: 'Yes', v: true }]">
+        </select>
+      </div>
+      <div class="input-group" title="When you add a record in this area, will you want to enter details?">
+        <span class="input-group-addon bold" focus-next-when-clicked>Hide Area?</span>
+        <select class="form-control" ng-model="item.hidden"
                 ng-options="o.v as o.n for o in [{ n: 'No', v: false }, { n: 'Yes', v: true }]">
         </select>
       </div>
