Change today to be recalculated upon going idle and coming back from idle, and usage of today in routes and links Fix error display for all errors, differing by development/production mode

--- a/apps/trolls_goals/public/tmpl/day.html
+++ b/apps/trolls_goals/public/tmpl/day.html
@@ -6,12 +6,12 @@
       </span>
     </a>
     <h2 class="time_header">{{ day | dayToDate | dateFormat }}</h2>
-    <a ng-if="day < today" href="#/day/{{day + 1 === today ? '' : day + 1}}" class="change_time"
+    <a ng-show="day < $root.today" href="#/day/{{day + 1}}" class="change_time"
        click-on-arrow="right">
       <span class="glyphicon glyphicon-arrow-right">
       </span>
     </a>
-    <span ng-if="day === today"
+    <span ng-show="day === $root.today"
           class="disabled glyphicon glyphicon-arrow-right">
     </span>
   </div>
